name:                pure-loader
version:             0.8.0.0
homepage:            purehs.org/doc/pure-loader
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-loader.git

library
  build-depends:
    base,
    pure

  hs-source-dirs: src

  exposed-modules:
    Pure.Loader

  default-language: Haskell2010
